<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"speedometer "</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_continue">Continue</string>
    <string name="current_speed">Current Speed</string>
    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="rest_time">Rest Time</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="cycling_history">History</string>
    <string name="cycling_current">Current</string>
    <string name="cycling_map">Map</string>
    <string name="title_activity_history">History</string>
    <string name="record_total_prefix">You rides totally&#160;</string>
    <string name="record_total_suffix">&#160;times</string>
    <string name="total_distance">Total diatance</string>
    <string name="total_time">Total Time</string>
    <string name="recent_cycling">Recently cycling record</string>
    <string name="cycling_run">Run</string>
    <string name="cycling_km">&#160;km</string>
    <string name="running_time">Cost time</string>
    <string name="title_activity_history_detail">HistoryDetailActivity</string>
    <string name="this_cycling_data">This cycling data</string>
    <string name="button_discard">Discard</string>
    <string name="button_share">Share</string>
    <string name="button_save">Save</string>

</resources>
